[tool.poetry]
name = "python-containerchecker"
version = "0.1.0"
description = ""
authors = ["Tim Bryant <timothybryant3@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.4.0"
PyYAML = "^6.0.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-semantic-release = "^8.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]
